@@ -6,7 +6,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
@@ -16,13 +15,18 @@ import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import lombok.val;
 import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 // @SpringBootTest
 class SpringBootUrlApplicationTests {
+
+    private static final Logger log = LoggerFactory.getLogger(SpringBootUrlApplicationTests.class);
 
     public static final String ABSOLUTE_PATH = System.getProperty("user.dir");
 
@@ -38,14 +42,10 @@ class SpringBootUrlApplicationTests {
     @Test
     public void contextLoads() throws IOException, URISyntaxException, SQLException, ClassNotFoundException, InstantiationException, IllegalAccessException {
         // 因为所携带路径中存在中文，因此辨识路径便会从中文部分断开
-        URL url0 = new URL("https://geoapi.qweather.com/v2/city/lookup?location=西安&key=f83cf5800baf480fa4c3bc6a474ffd90");
-        String urls = ChineseToUrl.ChineseToUrls("https://geoapi.qweather.com/v2/city/lookup?location=西安&key=f83cf5800baf480fa4c3bc6a474ffd90");
-        URL url = new URL(urls);
         URL url1 = new URL("https://devapi.qweather.com/v7/weather/now?location=101110101&key=f83cf5800baf480fa4c3bc6a474ffd90");
         URL url2 = new URL("http", "localhost", 8080, "/");
         URL url3 = new URL("file:" + ABSOLUTE_PATH + "/src/main/resources/application.properties");
 
-        System.out.println("URL 为：" + url3.toString());
         System.out.println("协议为：" + url3.getProtocol());
         System.out.println("验证信息：" + url3.getAuthority());
         System.out.println("获取此URL的文件名及请求参数：" + url3.getFile());
@@ -59,29 +59,49 @@ class SpringBootUrlApplicationTests {
         // 打开与此 URL ，并返回一个 InputStream ，以便从该连接读取。
         InputStream in = url3.openStream();
         new BufferedReader(new InputStreamReader(in, StandardCharsets.UTF_8)).lines().forEach(System.out::println);
+       System.out.print("\n");
 
-        // 将字转化为码是编码
-        System.out.println(URLEncoder.encode("罗德", "UTF-8"));
+        // URL只能解析ASCII字符(256个字符)，不能解析中文及特殊字符，因此需要将请求路径中的中文或者特殊字符进行编码处理
+        String strPath = "https://geoapi.qweather.com/v2/city/lookup?location=西安&key=f83cf5800baf480fa4c3bc6a474ffd90";
+        System.out.println("请求路径携带中文部分开始断开，表示无法解析：" + new URL(strPath).toURI());
+       System.out.print("\n");
+
+        // 使用工具类将中文或者特殊字符解析为 ASCII码
+        String urls = ChineseToUrl.ChineseToUrls(strPath);
+        System.out.println("使用工具类将请求路径中带中文的解析为：" + urls);
+        System.out.println("路径编码之后，路径没有从中间断开，并可以直接访问：" + new URL(urls));
+       System.out.print("\n");
+
+        // 将字转为码是编码
+        System.out.println("使用URLEncoder编码：" + URLEncoder.encode("西安", StandardCharsets.UTF_8));
+        // 注意：不要将整个URL请求路径进行编码。否则会将路径中‘://’、‘=’、‘&’也进行编码。URLEncoder只适合做URL的局部编码
+        System.out.println("无法将 URL 中所需要的部分进行保留：" + URLEncoder.encode(strPath, StandardCharsets.UTF_8));
+       System.out.print("\n");
+
 
         // 将码转为字是解码
-        System.out.println(URLDecoder.decode("10101101011", "utf-8"));
+        System.out.println("使用URLDecoder解码：" + URLDecoder.decode("%E7%BD%97%E5%BE%B7", "utf-8"));
     }
 
+    // TODO URLConnection类
     @Test
     public void contextLoads1() throws IOException {
-        URL url = new URL("https://devapi.qweather.com/v7/weather/now?location=101110101&key=f83cf5800baf480fa4c3bc6a474ffd90");
         URL url1 = new URL("http://localhost:8081/treeChildrenSet");
         HttpURLConnection conn = (HttpURLConnection) url1.openConnection();
+        // 设置连接通道的请求方法：GET、POST、PUT、DELETE等
         conn.setRequestMethod("GET");
-
+        // 设置请求参数
         conn.setRequestProperty("contentType", "application/json;charset=utf-8");
+        // 设置连接超时时间，单位毫秒
         conn.setConnectTimeout(360000);
+        // 设置读取超时时间，单位毫秒
         conn.setReadTimeout(360000);
 
         if (conn.getResponseCode() == 200) {
-            // 4.2获取响应的头字段
+            // 获取响应的头字段
             Map<String, List<String>> headers = conn.getHeaderFields();
-            System.out.println(headers); // 输出头字段
+            System.out.println(headers);
+            // 获取响应的字节流
             InputStream inputStream = conn.getInputStream();
             System.out.println(inputStream);
             InputStreamReader isr = new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8);
@@ -98,10 +118,9 @@ class SpringBootUrlApplicationTests {
     }
 
 
-    // URLClassLoader是ClassLoader的一个实现类，它既能从本地加载二进制文件类，也可以从远程加载类。
-    // 它有两个构造函数， 即
-    // URLClassLoader(URL[] urls)，使用默认的父类加载器（SystemClassLoader）创建一个ClassLoader对象
-    // URLClassLoader（URL[] urls, ClassLoader parent)，使用指定的类加载器作为父类加载器创建ClassLoader对象
+    // URLClassLoader是ClassLoader的实现类，既能从本地加载二进制文件类，也能从远程加载类。它有两个构造函数，即：
+    //   URLClassLoader(URL[] urls)，使用默认的父类加载器（SystemClassLoader）创建一个ClassLoader对象
+    //   URLClassLoader（URL[] urls, ClassLoader parent)，使用指定的类加载器作为父类加载器创建ClassLoader对象
     @Test
     public void contextLoads2() throws MalformedURLException, ClassNotFoundException, InstantiationException, IllegalAccessException {
         File file = new File(System.getProperty("user.dir") + "/src/main/java/com/example");
@@ -109,8 +128,8 @@ class SpringBootUrlApplicationTests {
         ClassLoader loader = new URLClassLoader(new URL[]{url});
         // loadClass()参数：所需class的含包名的全名
         Class<?> clazz = loader.loadClass("com.example.Hello");
-        System.out.println("当前类加载器" + clazz.getClassLoader());
-        System.out.println("父类加载器" + clazz.getClassLoader().getParent());
+        System.out.println("当前类加载器：" + clazz.getClassLoader());
+        System.out.println("父类加载器：" + clazz.getClassLoader().getParent());
         clazz.newInstance();
     }
 }
